# MDPI_Energies_2024_Expert_System

./: LICENSE  citation.cff
Exper_System/: LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
Exper_System/docs/: conf.py  index.rst
Exper_System/docs/subpackage/: module.rst
Exper_System/es-tpcm/: Create_and_export_regression.py  FuzzyRuleBasevVizualization.ipynb  KnowledgeBase.ipynb  ReadOPCUA.py  UserInterface.ipynb  main.py
Exper_System/es-tpcm/polynomial_regression_models/: model_cleaning_pump_pressure.pmml  model_drying_air_temperature.pmml  model_drying_fan_speed.pmml  model_fluid_temperature.pmml  model_rinsing_pump_pressure.pmml
Exper_System/test/: test_main.py
Expert_System/: LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
Expert_System/Average_active_power/: Cleaning pump pressure.csv  Drying air temperature.csv  Drying fan speed.csv  Fluid temperature.csv  Rinsing pump pressure.csv
Expert_System/docs/: conf.py  index.rst
Expert_System/docs/subpackage/: module.rst
Expert_System/es-tpcm/: Create_and_export_regression.py  FuzzyRuleBasevVizualization.ipynb  KnowledgeBase.ipynb  ReadOPCUA.py  UserInterface.ipynb  main.py
Expert_System/es-tpcm/polynomial_regression_models/: model_cleaning_pump_pressure.pmml  model_drying_air_temperature.pmml  model_drying_fan_speed.pmml  model_fluid_temperature.pmml  model_rinsing_pump_pressure.pmml
Expert_System/test/: test_main.py
Simulation_Model/: model_240527_TPCM_Simulation_Model_Frank.mo
Simulation_Model/ETAFactorySimulationLib 0.2/: package.mo
Simulation_Model/ETAFactorySimulationLib 0.2/Resources/Data_ASIM_Application/: ASIM_Application_CoolingDemand.mat  ASIM_Application_CoolingDemand_ScaledDown1000.mat
Simulation_Model/ETAFactorySimulationLib 0.2/Resources/Data_ETA_X_SystemModels/: Input_SystemA.mat  Input_SystemB.mat  Input_SystemC.mat
Simulation_Model/ETAFactorySimulationLib 0.2/Resources/Data_HydraulicDemonstrator/: Input_HydraulicDemonstratorCMS.mat
Simulation_Model/ETAFactorySimulationLib 0.2/Resources/Data_Pumps/: Bosch_Rexroth_PGH_BG3_NG13.mat  Grundfos_Magna3_25_120.mat  Grundfos_Magna3_25_40.mat  Grundfos_Magna3_25_80.mat  Grundfos_Magna3_32_120FN.mat  Grundfos_Magna3_32_60F.mat  Grundfos_Magna3_40_120F.mat  Grundfos_Magna3_40_150FN.mat  Grundfos_Magna3_40_40F.mat  Grundfos_Magna3_40_60F.mat  Grundfos_Magna3_40_80F.mat  Grundfos_Magna3_50_80F.mat  Grundfos_Unilift_CC9_A1.mat
Simulation_Model/ETAFactorySimulationLib 0.2/Resources/Data_SteamNet/: AirData.mat  Flex_Data_Bivalence_MRL.mat  Flex_Data_Bivalence_PRL.mat  Flex_Data_Bivalence_SRL.mat  HeatLossData.mat  PressureLossData.mat
Simulation_Model/ETAFactorySimulationLib 0.2/Resources/Data_UseCase_HeatingNetworks/: Input_UseCase.mat
Simulation_Model/ETAFactorySimulationLib 0.2/Resources/Data_Valves/: Valve_4WREE6EB32.mat  Valve_DBEE620315G24K31A1M.mat
Simulation_Model/ETAFactorySimulationLib 0.2/Resources/Data_Weather/: Darmstadt_2021.mat
Simulation_Model/IBPSA 4.0.0/: package.mo
Simulation_Model/Modelica 4.0.0/: package.mo
Simulation_Model/Modelica 4.0.0/Resources/BuildProjects/VisualStudio2005/: ModelicaMatIO.vcproj
Simulation_Model/ModelicaServices 4.0.0/: package.mo
